# mariachi-fidelizacion-system-

./: .gitignore  .pre-commit-config.yaml  CONTINUAR_EN_GCP.md  DEPLOY_RAILWAY.md  DEPLOY_RENDER.md  Dockerfile  GUIA_DEPLOYMENT.md  Procfile  README.md  alembic.ini  deploy.sh  deploy_docker.bat  docker-compose.gcp.yml  docker-compose.prod.yml  docker-compose.yml  env.development  env.example  env.gcp  env.production  env.testing  install_local.bat  main.py  nginx.conf  pyproject.toml  render.yaml  requirements.txt  requirements_simple.txt  setup_database.bat  simple_app.py  start_local.bat
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_migration.py
app/: __init__.py  celery.py  config.py  database.py  main.py
app/api/: analytics.py  auth.py  dependencies.py  instagram.py  interactions.py  notifications.py  odoo.py  stickers.py  users.py  videos.py
app/middleware/: logging.py  multitenant.py
app/models/: __init__.py  instagram_user.py  interaction.py  notification.py  notification_template.py  odoo_sync_log.py  site_config.py  sticker.py  user.py  video.py
app/schemas/: __init__.py  analytics.py  instagram.py  interaction.py  notification.py  odoo.py  site_config.py  sticker.py  user.py  video.py
app/services/: analytics_service.py  config_service.py  default_config_service.py  instagram_service.py  interaction_service.py  notification_service.py  odoo_service.py  points_service.py  report_service.py  sticker_service.py  sync_service.py  template_service.py  user_service.py  video_service.py  youtube_service.py
app/tasks/: __init__.py  analytics_tasks.py  email_tasks.py  notification_tasks.py  odoo_tasks.py
app/utils/: code_generator.py  pdf_generator.py  permissions.py  qr_generator.py  security.py
scripts/: backup.py  deploy_python_directo.sh  init_data.py  monitor.py  monitor_simple.sh  setup_database_gcp.sh  setup_gcp.sh
